# zaehler

./: .gitattributes  .gitignore  .release-please-manifest.json  AUDIT.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  package.json  release-please-config.json
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260501_0900_initial.py  20260501_2000_locations.py  20260502_0900_oil_deliveries.py  20260502_1000_tank_capacity.py  20260502_1200_reading_at.py  20260503_1000_totp_2fa.py  20260504_0900_location_geo.py  20260504_1500_audit_indexes_and_cleanup.py  20260504_1700_transformer_factor.py  20260504_2000_delivery_at.py  20260505_0600_heating_uppercase_fix.py  20260505_0900_heating_modular.py  20260505_1000_one_active_meter.py  20260505_1200_audit_3_indexes.py  20260505_1300_created_by_not_null.py  20260506_1300_user_mp_access.py  20260506_1500_qr_token.py  20260506_1530_can_assign_qr_tokens.py  20260527_0900_reading_photo_gps.py  20260528_1012_main_location.py  20260528_1200_mp_contract_market.py  20260528_1228_owners_and_assignments.py  20260528_1941_address_and_installation_location.py  20260529_0600_audit_log_created_at_index.py  20260601_0700_mp_kostenstelle.py  20260601_0900_report_config.py  20260602_1000_reading_photo_table.py  20260602_1800_monthly_consumption.py  20260611_1900_virtual_measuring_points.py  20260612_1100_suppliers_and_assignments.py  20260615_1200_mieters_and_assignments.py  20260615_1300_mieter_split_name.py
backend/src/meters/: cli.py  main.py  server.py
backend/tests/: conftest.py
backend/tests/integration/: test_access_permissions.py  test_audit.py  test_auth.py  test_cli_relabel_unit.py  test_concurrency.py  test_consumption_endpoint_aggregation.py  test_dashboard.py  test_entries.py  test_exports.py  test_health.py  test_import_readings.py  test_legacy_timestamp_repair.py  test_location_measuring_points.py  test_locations.py  test_main_locations.py  test_master_data_measuring_points.py  test_measuring_point_qr.py  test_measuring_points.py  test_midnight_repair.py  test_mieter_assignments.py  test_mieters.py  test_migrations.py  test_monthly_consumption.py  test_oil.py  test_owner_assignments.py  test_owners.py  test_permissions.py  test_qr_tokens.py  test_reading_midnight.py  test_reading_timezone.py  test_readings.py  test_readings_photo.py  test_report_configs.py  test_reports_endpoint.py  test_restore.py  test_search.py  test_spa_fallback.py  test_supplier_assignments.py  test_suppliers.py  test_users_lifecycle.py  (+1 more)
backend/tests/unit/: test_access_service.py  test_app_factory_hardening.py  test_client_ip.py  (+7 more)
docs/: api.md  (+8 more)
(+364 files in other folders)
